--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,119 @@
 /* ========================================
+            Xtra Large device start
+======================================== */
+
+@media only screen and (min-width: 1200px) and (max-width: 1399.99px)   {
+    /* ===============================
+              Banner part start
+    ================================== */
+
+    .carousel-caption {
+        position: absolute;
+        bottom: 1.25rem;
+        padding-top: 1.25rem;
+        padding-bottom: 1.25rem;
+        color: #fff;
+        text-align: center;
+        top: 54%;
+    }
+
+    .banner-subtitle {
+        padding: 0 200px;
+    }
+
+    /* ===============================
+              Banner part end
+    ================================== */
+
+    /* ===============================
+        Our Package part start
+    ==================================  */
+    .package-title {
+        font-size: 1.74rem;
+    }
+
+    .package-subtitle {
+        padding-right: 22px;
+    }
+
+    .package-btn {
+        padding: 13px 57px;
+    }
+
+    /* ===============================
+        Our Package part end
+    ================================== */
+
+
+}
+
+/* ========================================
+            Xtra Large device start
+======================================== */
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+    /* ===============================
+              Banner part start
+    ================================== */
+
+    .carousel-caption {
+        position: absolute;
+        bottom: 1.25rem;
+        padding-top: 1.25rem;
+        padding-bottom: 1.25rem;
+        color: #fff;
+        text-align: center;
+        top: 54%;
+    }
+
+    .banner-title {
+        padding: 0 100px;
+        margin-bottom: 10px;
+    }
+
+    .banner-subtitle {
+        padding: 0 100px;
+    }
+
+    /* ===============================
+              Banner part end
+    ================================== */
+
+    /* ===============================
+        Our Package part start
+    ==================================  */
+
+    .package-item {
+        margin-bottom: 50px;
+    }
+
+    /* ===============================
+        Our Package part end
+    ================================== */
+
+    /* ===============================
+            Clint part start
+    ==================================  */
+
+    .card {
+        margin-bottom: 50px;
+        padding: 20px;
+    }
+
+    /* ===============================
+            Clint part end
+    ==================================  */
+
+
+
+
+}
+
+/* ========================================
+            Large device end
+======================================== */
+
+
+/* ========================================
             Medium device start
 ======================================== */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
@@ -33,7 +148,7 @@
     }
 
     .banner-title {
-        padding: 0;
+        padding: 0 50px;
         margin-bottom: 10px;
     }
 
@@ -157,7 +272,7 @@
 
     .banner-title {
         font-size: 1.85rem;
-        padding: 0;
+        padding: 0 70px;
         margin-bottom: 10px;
     }
 
